Set up basic structure to begin app development

--- a/CodecampSDQ2016/Droid/Properties/AndroidManifest.xml
+++ b/CodecampSDQ2016/Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.codecampsdq.app.codecampsdq2016">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.codecampsdq5.app">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="CodecampSDQ2016">
-	</application>
+	<application android:label="CodecampSDQ2016"></application>
 </manifest>
