--- a/CodecampSDQ2016/CodecampSDQ2016/packages.config
+++ b/CodecampSDQ2016/CodecampSDQ2016/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Forms" version="1.3.5.6335" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
+  <package id="Fody" version="1.29.2" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" developmentDependency="true" />
+  <package id="PropertyChanged.Fody" version="1.50.3" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" developmentDependency="true" />
+  <package id="Xamarin.Forms" version="2.0.0.6484" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
+  <package id="Ziti.Marioneta" version="1.0.3" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
 </packages>
