--- a/CodecampSDQ2016/iOS/CodecampSDQ5.iOS.csproj
+++ b/CodecampSDQ2016/iOS/CodecampSDQ5.iOS.csproj
@@ -112,4 +112,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.5.6335\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.5.6335\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
+  <ItemGroup>
+    <BundleResource Include="Resources\photo.png" />
+    <BundleResource Include="Resources\globe%402x.png" />
+    <BundleResource Include="Resources\pineda%402x.png" />
+    <BundleResource Include="Resources\luis%402x.png" />
+    <BundleResource Include="Resources\claudio%402x.png" />
+    <BundleResource Include="Resources\gregorex%402x.png" />
+  </ItemGroup>
 </Project>
