--- a/CodecampSDQ2016/Droid/CodecampSDQ5.Droid.csproj
+++ b/CodecampSDQ2016/Droid/CodecampSDQ5.Droid.csproj
@@ -108,6 +108,10 @@
     <AndroidResource Include="Resources\drawable\luis.png" />
     <AndroidResource Include="Resources\drawable\pineda.png" />
     <AndroidResource Include="Resources\drawable\sd.png" />
+    <AndroidResource Include="Resources\drawable\fundacionBalaguer.png" />
+    <AndroidResource Include="Resources\drawable\megsoft.png" />
+    <AndroidResource Include="Resources\drawable\microsoft.png" />
+    <AndroidResource Include="Resources\drawable\mic.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.0.0.6490\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.0.0.6490\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
