--- a/CodecampSDQ2016/CodecampSDQ2016/packages.config
+++ b/CodecampSDQ2016/CodecampSDQ2016/packages.config
@@ -16,6 +16,7 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
   <package id="Splat" version="1.3.3" targetFramework="portable45-net45+win8+wp8" />
   <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.3.0" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Xamarin.Forms" version="2.0.0.6490" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Ziti.Marioneta" version="1.0.3" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
 </packages>
