--- a/CodecampSDQ2016/Droid/packages.config
+++ b/CodecampSDQ2016/Droid/packages.config
@@ -11,6 +11,7 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="monoandroid6" />
   <package id="Splat" version="1.3.3" targetFramework="monoandroid6" />
   <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="monoandroid6" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.3.0" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.3" targetFramework="MonoAndroid60" />
