--- a/CodecampSDQ2016/iOS/packages.config
+++ b/CodecampSDQ2016/iOS/packages.config
@@ -11,5 +11,6 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios1" />
   <package id="Splat" version="1.3.3" targetFramework="xamarinios1" />
   <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="xamarinios1" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.3.0" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.0.0.6490" targetFramework="xamarinios10" />
 </packages>
