Create UI for the screen

--- a/CodecampSDQ2016/CodecampSDQ2016/CodecampSDQ5.csproj
+++ b/CodecampSDQ2016/CodecampSDQ2016/CodecampSDQ5.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Screens\SessionDetails\SessionDetailViewModel.cs" />
     <Compile Include="Screens\SessionDetails\SessionDetailScreen.cs" />
     <Compile Include="Screens\SessionDetails\SessionDetailsViewCell.cs" />
+    <Compile Include="Screens\TweetIt\TweetItScreen.cs" />
+    <Compile Include="Screens\TweetIt\TweetItViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Fody.1.29.2\build\portable-net+sl+win+wpa+wp\Fody.targets" Condition="Exists('..\packages\Fody.1.29.2\build\portable-net+sl+win+wpa+wp\Fody.targets')" />
@@ -141,6 +143,7 @@
     <Folder Include="Screens\SocialApps\" />
     <Folder Include="Services\Converters\" />
     <Folder Include="Screens\SessionDetails\" />
+    <Folder Include="Screens\TweetIt\" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup />
