--- a/CodecampSDQ2016/CodecampSDQ2016/packages.config
+++ b/CodecampSDQ2016/CodecampSDQ2016/packages.config
@@ -3,11 +3,16 @@
   <package id="akavache" version="4.1.2" targetFramework="portable45-net45+win8+wp8" />
   <package id="akavache.core" version="4.1.2" targetFramework="portable45-net45+win8+wp8" />
   <package id="akavache.sqlite3" version="4.1.2" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Autofac" version="3.5.2" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Fody" version="1.29.2" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" developmentDependency="true" />
+  <package id="LinqToTwitter" version="3.1.2" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
+  <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="PropertyChanged.Fody" version="1.50.3" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" developmentDependency="true" />
   <package id="Rx-Core" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
@@ -16,6 +21,8 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
   <package id="Splat" version="1.3.3" targetFramework="portable45-net45+win8+wp8" />
   <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="TweetinviAPI" version="0.9.10.2" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
+  <package id="Xam.Plugin.Connectivity" version="2.0.2" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.3.0" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Xamarin.Forms" version="2.0.0.6490" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Ziti.Marioneta" version="1.0.3" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
