--- a/CodecampSDQ2016/iOS/packages.config
+++ b/CodecampSDQ2016/iOS/packages.config
@@ -3,7 +3,13 @@
   <package id="akavache" version="4.1.2" targetFramework="xamarinios1" />
   <package id="akavache.core" version="4.1.2" targetFramework="xamarinios1" />
   <package id="akavache.sqlite3" version="4.1.2" targetFramework="xamarinios1" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="xamarinios1" />
+  <package id="Autofac" version="3.5.2" targetFramework="xamarinios10" />
+  <package id="CoreTweet" version="0.6.1.267" targetFramework="xamarinios10" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="xamarinios10" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="xamarinios10" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios10" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="xamarinios10" />
   <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios1" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios1" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="xamarinios1" />
@@ -11,6 +17,8 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios1" />
   <package id="Splat" version="1.3.3" targetFramework="xamarinios1" />
   <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="xamarinios1" />
+  <package id="TweetinviAPI" version="0.9.10.2" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Connectivity" version="2.0.2" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.3.0" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.0.0.6490" targetFramework="xamarinios10" />
 </packages>
